--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "morgan-stanley",
+  "name": "morgan-stanley-assessment",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,23 +16,5 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
 }
